# NTUGR

./: .gitignore  577.txt  Dockerfile  Interface.drawio  Readme.md  Untitled Diagram.drawio  analyze.py  data.txt  eval.sh  framework.drawio  run.sh  run_test.sh  visualize.py
alpha/: device.cpp  device.py
alpha/router/: router
benchmark/evaluation_scripts/: evaluation.sh  evaluator  evaluator.cpp  makefile
cuda-example/: CMakeLists.txt  kernel.cu  main.cpp  run.sh  vector_add  vector_add.cu
dqn/: actor.py  clear.sh  dqn.py  enviroment.py  gpu.py  inference.py  main.py  trainer.py
dqn/ckpt/0509-2336/: best_0509-2336.pth  events.out.tfevents.1715268969.eda38.401177.0  events.out.tfevents.1715268997.eda38.401620.0  trained_model_0509-2336.pth
evaluation/: evaluation.sh  evaluator
exp/: exp.py  parser.py
input/: example.net  resource_file_format.txt
output/: example_sol.PR_output
scripts/: analyze.py  capacity-map.py  data.txt  heatmap.py  optimal-path.py  partial-capacity-map.py  pin.txt  steiner.py  visualize_heatmap.py  visualize_net.py  visualize_pin.py
src/: CMakeLists.txt  global.h  main.cpp
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/a.out.dSYM/Contents/Resources/Relocations/aarch64/: a.out.yml
src/basic/: CMakeLists.txt  design.cpp  design.h  layer.h  metrics.h
src/flute/: CMakeLists.txt  flute.h
src/gr/: CMakeLists.txt  GRNet.cpp  GRNet.h  GRTree.cpp  GRTree.h  GlobalRouter.cpp  GlobalRouter.h  GridGraph.cpp  GridGraph.h  MazeRoute.cpp  MazeRoute.h  PatternRoute.cpp  PatternRoute.h
src/loader/: parser.cpp
src/utils/: log.cpp  utils.h
